--- a/kubernetes/auth.yaml
+++ b/kubernetes/auth.yaml
@@ -13,7 +13,7 @@ spec:
     spec: 
       containers:
         - name: chatapp-auth
-          image: auth-api:latest
+          image: luccaboets/auth-api:latest
           ports:
             - containerPort: 3000
               name: http-web-svc
