--- a/kubernetes/auth.yaml
+++ b/kubernetes/auth.yaml
@@ -1,18 +1,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: chatapp-auth
+  name: auth
 spec:
   selector: 
     matchLabels:
-      app: chatapp-auth
+      app: auth
   template:
     metadata:
       labels:
-        app: chatapp-auth
+        app: auth
     spec: 
       containers:
-        - name: chatapp-auth
+        - name: auth
           image: luccaboets/auth-api:latest
           ports:
             - containerPort: 3000
@@ -21,10 +21,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: chatapp-auth
+  name: auth
 spec:
   selector: 
-    app: chatapp-auth
+    app: auth
   ports:
     - name: static
       protocol: TCP
